02-apigateway/05-deploy-vs-oauth2.yml
# and an empty file will abort the edit. If an error occurs while saving this file will be
# reopened with the relevant failures.
#
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  generation: 5
  labels:
    kiali_wizard: request_routing
  name: vs-oauth2
  namespace: apps
spec:
  gateways:
  - lab-gateway
  hosts:
  - 'oauth2-proxy.oauth2-proxy.svc.cluster.local'
  http:
    - route:
      - destination:
          host: oauth2-proxy.oauth2-proxy.svc.cluster.local
